--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@
   <br />
   <br />
   <br />
-  <a href="https://www.novasystems.com.br/" target="_blank"><img src="https://www.novasystems.com.br/assets/img/logo.webp" alt="Agência Nova Systems – Marketing Digital" title="Agência Nova Systems – Marketing Digital" border="0"></a>
+  <a href="https://www.novasystems.com.br/" target="_blank"><img src="https://www.novasystems.com.br/assets/img/logo.png" alt="Agência Nova Systems – Marketing Digital" title="Agência Nova Systems – Marketing Digital" border="0"></a>
   <br />
   <strong>Agência Nova Systems – Marketing Digital</strong><br />
   Telefone: (11) 3280-1440 - São Paulo - SP<br />
