--- a/public_html/index1.html
+++ b/public_html/index1.html
@@ -14,6 +14,17 @@
       color: #265a88;
     }
   </style>
+  <!-- Smartsupp Live Chat script -->
+		<script type="text/javascript">
+		var _smartsupp = _smartsupp || {};
+		_smartsupp.key = '72a03b11ee4f4248ebe32d043dd78767d9b7667c';
+		window.smartsupp||(function(d) {
+		var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+		s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+		c.type='text/javascript';c.charset='utf-8';c.async=true;
+		c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+		})(document);
+		</script>
 </head> 
 <body>
 <div align="center">
